Add -fld-path= to specify an arbitrary executable as the linker
The value can be either a relative path (relative to the current working
directory) or an absolute path. -fld-path= complements and overrides
-fuse-ld={bfd,gold,lld}. If in the future, we want to make dfferent
linker option decisions we can let -fuse-ld= represent the linker flavor
and -fld-path= the executable name.

	PR driver/93645
	* common.opt (-fld-path=): Add -fld-path=
	* opts.c (common_handle_option): Handle OPT_fld_path_.
	* gcc.c (driver_handle_option): Likewise.
	* collect2.c (main): Likewise.
	* doc/invoke.texi: Document -fld-path=.

--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -14651,6 +14651,12 @@ Use the @command{gold} linker instead of the default linker.
 @opindex fuse-ld=lld
 Use the LLVM @command{lld} linker instead of the default linker.
 
+@item -fld-path=@var{linker}
+@opindex fld-path=linker
+Use the specified executable named @var{linker} instead of the default linker.
+If @var{linker} does not contain any slash character, the linker will be
+searched for using @env{PATH}.  This option overrides @option{-fuse-ld=}.
+
 @cindex Libraries
 @item -l@var{library}
 @itemx -l @var{library}
